tests/negative/neg_chan_empty_recv.safe
-- Test: neg_chan_empty_recv
-- Description: Placeholder for future receive-only deadlock analysis.
--   PR11.9d intentionally does not add a real deadlock analyzer, so this
--   fixture is kept only as deferred coverage for later work.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Expected: REJECT channel_deadlock

package empty_recv_test

   subtype msg is integer (0 to 255)

   --  No_Sender_Ch: declared but no task ever sends to it.
   channel no_sender_ch : msg capacity 1

   --  Receiver_Task: blocks forever waiting for data on an
   --  always-empty channel.
   task receiver_task
      v : msg

      loop
         receive no_sender_ch, v  -- ERROR: no sender exists for this channel
